apps/vibravid/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vibravid-internal
  namespace: vibravid
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`download.internal.fferrando.cc`)
      kind: Rule
      services:
        - name: vibravid
          port: 8000
  tls:
    secretName: vibravid-internal-tls
